--- a/src/components/MetaRow/styles.less
+++ b/src/components/MetaRow/styles.less
@@ -84,7 +84,7 @@
         overflow-y: visible;
         scroll-snap-type: x mandatory;
         -webkit-overflow-scrolling: touch;
-        padding: 0 1.5rem 1rem;
+        padding: 20px 1.5rem;
         margin-bottom: -1rem;
         gap: 1.25rem;
         scrollbar-width: none;
